   `Element::use()' and `Element::unuse()'; renamed
   `Element::change_configuration()' to `Element::set_configuration()' and
   `Element::set_configuration_argument()'.

** Renamed Ethernet and ARP structures; what was `struct ether_header' is
   now `struct click_ether', and so forth, to avoid conflicts.

** Removed `IPVERSION' constant from `click_ip.h' to support IPv6.

* General

** Added new `tickets' handler, available by default on every element.

** Improved support for large numbers of handlers by reducing memory usage.

** Click configurations can contain cpp(1)-style `#line LINENUMBER' or `#
   LINENUMBER' directives. The tools generate them, too, so you will get
   better error messages than formerly.

** Improved element documentation by adding summaries. The generated
   elements(n) manual page now groups the elements by function. Also
   updated and documented the format for doc comments (see
   `doc/elementdoc.7').

** Added low-level RPC capability. LLRPCs are low-level handlers designed
   for speed rather than ease of use or human-readable results. In the
   Linux kernel module, LLRPCs are called in response to ioctl(2) commands
   on handler files. (The user-level program doesn't support LLRPCs yet.)
   Unlike handlers, LLRPCs can both take arguments and return results.
   IPRateMonitor(n), for example, uses LLRPCs to report rate information.

* User-level driver

** User-level Click will no longer stop by default when an InfiniteSource
   (or RatedSource or FromDump) runs out of packets to send. Supply the
   `-s' option to get the old behavior.

** You can give shell globbing syntax to the user-level driver's `-h
   HANDLER' option; for example, `-h "*.config"'.
 
** Fixed FromBPF and ToBPF, finally. The fixed versions are called
   FromDevice and ToDevice.

** Added ControlSocket element so you can call handlers from other
   programs.

* Kernel driver

** Added patch for Linux kernel 2.2.16. This patch contains the latest